Fix - Make avatar image not distorted

--- a/src/components/modules/shared/avatar/styles.module.scss
+++ b/src/components/modules/shared/avatar/styles.module.scss
@@ -17,10 +17,6 @@
     overflow: hidden;
     border-radius: 50px;
 
-    img{
-      transform: scale(1.2);
-    }
-
     margin-bottom: 10px;
   }
 
